[package]
name = "staking"
version = "0.1.0"
description = "Staking contract for token rewards and delegation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
