[package]
name = "vault"
version = "0.1.0"
description = "Vault contract for secure token storage and management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
